# trieste-miniml

./: .clang-format  .gitignore  Makefile  README.md  conditional.trieste  miniml_generator.py  run_experiments.py  unterm.trieste
examples/: app2.miniml  applyfun.miniml  arith.miniml  comparison.miniml  conditional.miniml  example.miniml  expr-cond.miniml  expr.miniml  fact.miniml  generated.miniml  id.miniml  id_copy.miniml  idid.miniml  loop.miniml  multiarrow.miniml  multifun.miniml  override.miniml  parentheses.miniml  polyarrow_print.miniml  print.miniml  test.miniml  unterm.miniml
examples/fail/: argprint.miniml  arith.miniml  bindprint.miniml  circtype.miniml  conditional.miniml  mixexpr.miniml  mulfun.miniml  polyprint.miniml  typerr.miniml  unterm.miniml
llvmir_tests/: test.miniml
src/: CMakeLists.txt  init_parse.cc  llvm-lang.hh  main.cc  miniml-lang.hh  reader.cc  runtime.cc  runtime.hh
src/passes/: internal.hh  llvm_utils.cc  llvm_utils.hh  passes.cc  utils.cc  utils.hh
src/passes/llvm-ir/: blockify.cc  closure_conversion.cc  closure_globals.cc  code_generation.cc  compile.cc  free_variables.cc  globals.cc  llvmIR.cc  main_function.cc  propagate_free_variables.cc  resolve_polymorphism.cc  reverse_blocks.cc
src/passes/parse/: app.cc  arith.cc  cleanup.cc  comparison.cc  conditionals.cc  exprs.cc  fun.cc  init_parse.cc  let.cc  parens.cc  parse_cleanup.cc
src/passes/typecheck/: inference.cc  resolve_print.cc  solve_constraints.cc
